--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<groupId>kr.co.rland</groupId>
 	<artifactId>rlandweb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>rlandweb</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
